jena-shex/src/test/files/spec/negativeSyntax/PN_LOCAL-PERCENT-start.shex
# PN_LOCAL with bad PERCENT escape in first character
# source: turtle-syntax-bad-ln-dash-start.ttl
PREFIX ex: <http://a.example/>

ex:IssueShape {
   ex:%p1 .
}
